@@ -74,9 +74,11 @@ code        { font:1em Monaco, Courier, monospace; }
 /* Tables (needs improvement)
 -------------------------------------------------------------- */
 
-table   { margin-bottom: 1.4em; border-top:.1em solid #ddd; border-left:.1em solid #ddd; }
-th,td   { height: 1em; padding:.2em .4em; border-bottom:.1em solid #ddd; border-right:.1em solid #ddd; }
-th      { font-weight:700; background:#eee; }
+table   { margin-bottom:1.4em; }
+th      { border-bottom:2px solid #ccc; font-weight:bold; }
+td      { border-bottom:1px solid #ddd; }
+th,td   { padding:4px 10px 4px 0; }
+table .last { padding-right:0; }
 
 
 /* Some default classes
